[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/bullet_light.png" type="Texture" id=1]
[ext_resource path="res://sprites/bullet.png" type="Texture" id=2]
[ext_resource path="res://scenes/entities/self_guided_bullet/Self_giuded_bullet.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 10.5

[node name="Self_giuded_bullet" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="RemoveTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="Light2D" type="Light2D" parent="."]
rotation = 3.14159
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 1 )
color = Color( 0.470588, 0.976471, 1, 1 )
shadow_enabled = true
shadow_color = Color( 0.690196, 0.117647, 0.917647, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 3.14159
scale = Vector2( 0.458548, 0.458548 )
shape = SubResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 4.0

[node name="Sprite" type="Sprite" parent="."]
rotation = -3.14159
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
